--- a/index.html
+++ b/index.html
@@ -3,183 +3,209 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AvantQuest | Roblox Development Group</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <title>AvantQuest</title>
     <style>
-        body {
+        /* General Reset */
+        body, html {
             margin: 0;
-            font-family: 'Poppins', sans-serif;
-            background: linear-gradient(135deg, #1e1e2f, #3a3a5e);
-            color: #fff;
+            padding: 0;
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(to right, #1c1c1c, #3a3a3a);
+            color: white;
             overflow-x: hidden;
         }
 
         header {
-            position: sticky;
+            position: fixed;
+            width: 100%;
             top: 0;
+            left: 0;
             background: rgba(0, 0, 0, 0.8);
             padding: 10px 20px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
             z-index: 1000;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
         }
 
-        header h1 {
+        header .logo {
             font-size: 24px;
-            font-weight: 600;
+            font-weight: bold;
+            color: #00d8ff;
         }
 
         header nav {
-            display: flex;
-            gap: 15px;
+            float: right;
         }
 
         header nav a {
             text-decoration: none;
-            color: #fff;
-            font-weight: 400;
+            color: white;
+            margin: 0 15px;
             transition: color 0.3s;
         }
 
         header nav a:hover {
-            color: #ff66cc;
-        }
-
-        section {
-            padding: 60px 20px;
-            text-align: center;
-            position: relative;
+            color: #00d8ff;
         }
 
         .hero {
             height: 100vh;
             display: flex;
-            flex-direction: column;
-            justify-content: center;
             align-items: center;
-            background: linear-gradient(180deg, rgba(0,0,0,0.9), rgba(0,0,0,0.6)), url('https://via.placeholder.com/1920x1080') no-repeat center center/cover;
-            color: #fff;
+            justify-content: center;
+            text-align: center;
+            background: url('https://source.unsplash.com/1600x900/?technology') no-repeat center center/cover;
+            color: white;
+            position: relative;
         }
 
-        .hero h2 {
-            font-size: 3rem;
-            margin-bottom: 10px;
-            animation: fadeIn 1.5s ease-in-out;
+        .hero::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.6);
         }
 
-        .hero p {
-            font-size: 1.2rem;
-            max-width: 800px;
-            margin: 0 auto;
+        .hero-content {
+            position: relative;
+            z-index: 1;
+        }
+
+        .hero-content h1 {
+            font-size: 4em;
+            margin-bottom: 20px;
             animation: fadeIn 2s ease-in-out;
         }
 
-        .content {
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 20px;
-            padding: 40px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
-            margin: 40px auto;
-            max-width: 800px;
-            text-align: left;
-            animation: slideIn 1.5s ease-in-out;
+        .hero-content p {
+            font-size: 1.5em;
+            margin-bottom: 30px;
+            animation: fadeIn 2.5s ease-in-out;
         }
 
-        .semi-circle {
-            position: absolute;
-            top: -100px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 200px;
-            height: 100px;
-            background: linear-gradient(45deg, rgba(255, 102, 204, 0.7), rgba(102, 102, 255, 0.7));
-            border-radius: 50% 50% 0 0;
-            filter: blur(15px);
+        .hero-content a {
+            display: inline-block;
+            padding: 15px 30px;
+            font-size: 1em;
+            color: white;
+            background: #00d8ff;
+            text-decoration: none;
+            border-radius: 25px;
+            transition: background 0.3s;
         }
 
-        .fade-in {
-            opacity: 0;
-            animation: fadeIn 2s forwards;
-        }
-
-        footer {
-            background: rgba(0, 0, 0, 0.9);
-            text-align: center;
-            padding: 20px 0;
-            font-size: 0.9rem;
-            color: #aaa;
+        .hero-content a:hover {
+            background: #007ba7;
         }
 
         @keyframes fadeIn {
-            0% { opacity: 0; }
-            100% { opacity: 1; }
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
         }
 
-        @keyframes slideIn {
-            0% { transform: translateY(50px); opacity: 0; }
-            100% { transform: translateY(0); opacity: 1; }
+        section {
+            padding: 80px 20px;
+            text-align: center;
         }
 
-        @media (max-width: 768px) {
-            .hero h2 {
-                font-size: 2rem;
-            }
+        section h2 {
+            font-size: 2.5em;
+            margin-bottom: 20px;
+            color: #00d8ff;
+        }
 
-            .hero p {
-                font-size: 1rem;
-            }
+        .features {
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+
+        .feature {
+            background: #292929;
+            border-radius: 15px;
+            padding: 20px;
+            width: 300px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            transition: transform 0.3s, box-shadow 0.3s;
+        }
+
+        .feature:hover {
+            transform: scale(1.05);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.5);
+        }
+
+        .feature h3 {
+            font-size: 1.5em;
+            margin-bottom: 10px;
+        }
+
+        .feature p {
+            font-size: 1em;
+        }
+
+        footer {
+            background: #1c1c1c;
+            color: #888;
+            text-align: center;
+            padding: 20px;
+        }
+
+        footer a {
+            color: #00d8ff;
+            text-decoration: none;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>AvantQuest</h1>
+        <div class="logo">AvantQuest</div>
         <nav>
-            <a href="#about">About Us</a>
-            <a href="#services">Services</a>
-            <a href="#team">Team</a>
+            <a href="#about">About</a>
+            <a href="#features">Features</a>
             <a href="#contact">Contact</a>
         </nav>
     </header>
 
-    <section class="hero">
-        <h2>Welcome to AvantQuest</h2>
-        <p>Your premier destination for innovative Roblox development projects.</p>
-    </section>
+    <div class="hero">
+        <div class="hero-content">
+            <h1>Welcome to AvantQuest</h1>
+            <p>Your ultimate destination for innovative solutions.</p>
+            <a href="#features">Explore Now</a>
+        </div>
+    </div>
 
     <section id="about">
-        <div class="content">
-            <div class="semi-circle"></div>
-            <h3>About Us</h3>
-            <p>AvantQuest is a forward-thinking development group specializing in crafting unique Roblox experiences. From immersive games to powerful tools, we bring your visions to life.</p>
-        </div>
+        <h2>About AvantQuest</h2>
+        <p>AvantQuest is dedicated to providing cutting-edge technologies and tailored solutions to empower your business for a brighter tomorrow.</p>
     </section>
 
-    <section id="services">
-        <div class="content">
-            <h3>Our Services</h3>
-            <p>We offer a range of services including scripting, UI design, 3D modeling, and project management. Our team is dedicated to delivering high-quality results tailored to your needs.</p>
-        </div>
-    </section>
-
-    <section id="team">
-        <div class="content">
-            <h3>Meet the Team</h3>
-            <p>Our team consists of talented developers, designers, and creators who are passionate about Roblox. Together, we push the boundaries of what's possible in virtual worlds.</p>
-        </div>
-    </section>
-
-    <section id="contact">
-        <div class="content">
-            <h3>Contact Us</h3>
-            <p>Have a project in mind? Reach out to us and let’s make it happen. Email us at <a href="mailto:contact@avantquest.com">contact@avantquest.com</a>.</p>
+    <section id="features">
+        <h2>Features</h2>
+        <div class="features">
+            <div class="feature">
+                <h3>Innovative Design</h3>
+                <p>Experience state-of-the-art designs that resonate with your vision.</p>
+            </div>
+            <div class="feature">
+                <h3>Seamless Integration</h3>
+                <p>We ensure a smooth and efficient transition for all your systems.</p>
+            </div>
+            <div class="feature">
+                <h3>Reliable Support</h3>
+                <p>Our dedicated support team is always here to assist you.</p>
+            </div>
         </div>
     </section>
 
     <footer>
-        <p>&copy; 2024 AvantQuest. All rights reserved.</p>
+        <p>&copy; 2024 AvantQuest. All Rights Reserved. | <a href="#">Privacy Policy</a></p>
     </footer>
 </body>
 </html>
